# rust_warp_postgres

./: README.md
backend/: Cargo.toml
backend/sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
backend/src/: main.rs
backend/src/_tests/: model_db.rs  model_todo.rs  web_todo.rs
backend/src/model/: db.rs  mod.rs  todo.rs
backend/src/security/: mod.rs
backend/src/web/: filter_utils.rs  mod.rs  todo.rs
frontend/web-folder/: index.html
