[package]
name = "rust_warp_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
futures = "0.3"
thiserror = "1.0"
# JSON dependencies
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# Web dependencies
warp = "0.3"

# Database dependencies
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres"] }

